<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#232223"
    android:weightSum="6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|right"
        android:textColor="#0000ff"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="#9DFFD4"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="10dp"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/ac"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="AC"
            android:layout_margin="5dp"
            android:textColor="#FF0000"
            android:textSize="30dp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            android:background="@drawable/keyboard_btn"/>
        <Button
            android:id="@+id/power"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/power"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/back"
            android:layout_margin="5dp"
            android:onClick="ButtonClick"
            android:textStyle="bold"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
        <Button
            android:id="@+id/div"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/div"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:onClick="ButtonClick"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/seven"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:onClick="ButtonClick"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/eight"
            android:layout_margin="5dp"
            android:onClick="ButtonClick"
            android:textStyle="bold"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/nine"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            android:layout_margin="5dp"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
        <Button
            android:id="@+id/mul"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_height="fill_parent"
            android:text="@string/mul"
            android:onClick="ButtonClick"
            android:layout_margin="5dp"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/four"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:onClick="ButtonClick"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/five"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            android:layout_margin="5dp"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/six"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            android:layout_margin="5dp"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
        <Button
            android:id="@+id/sub"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/sub"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            android:layout_margin="5dp"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/one"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:onClick="ButtonClick"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/two"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            android:layout_margin="5dp"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_height="fill_parent"
            android:text="@string/three"
            android:onClick="ButtonClick"
            android:layout_margin="5dp"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:textStyle="bold"
            android:text="@string/add"
            android:onClick="ButtonClick"
            android:layout_margin="5dp"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/zero"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            android:layout_margin="5dp"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
        <Button
            android:id="@+id/decimal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/dec"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            android:layout_margin="5dp"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
        <Button
            android:id="@+id/ans"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_height="fill_parent"
            android:text="@string/ans"
            android:onClick="ButtonClick"
            android:layout_margin="5dp"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
        <Button
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:textStyle="bold"
            android:text="@string/equal"
            android:onClick="ButtonClick"
            android:layout_margin="5dp"
            android:textSize="30dp"
            android:background="@drawable/keyboard_btn"/>
    </LinearLayout>




</LinearLayout>